# therandom.space

./: .gitignore  Makefile  app.py  lampadophore.py  package.json  pyproject.toml  shell.nix  tailwind.config.js
data/: citations.proc2  films.proc5
static/: prims.js  random.js  source.css  style.css  wind.js
templates/: animation.html  showcase.html
templates/layouts/: base.html  regular.html
templates/macros/: macros.html
website/: app.py  helper.py  lampadophore.py  tailwind.config.js
website/data/: alsa.proc2  alsa.proc3  citations.proc2  config.json  films.proc5  fr.proc2  raw-alsace.txt  raw-citations.txt  raw-films.txt  raw-fr.txt  raw-marques.txt
website/static/: animation_template.js  minHeap.js  prims.js  random.js  snake.js  source.css  style.css  wind.js
website/templates/: 404.html  about.html  bestof.html  brouse.html  home.html  index.html  list.html  showcase.html  word.html
website/templates/layouts/: base.html  regular.html
website/templates/macros/: macros.html
