[tool.poetry]
name = "therandom.space"
version = "1.0.0"
description = "Space for random stuff by cozyfractal"
authors = ["ddorn <diego.dorn@free.fr>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.3"
flask-restful = "^0.3.9"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
