[project]
name = "therandom.space"
version = "1.0.0"
description = "Space for random stuff by cozyfractal"
authors = [{ name = "ddorn", email = "diego.dorn@free.fr" }]
requires-python = ">=3.8"
license = "WTFPL"
dependencies = [
    "flask>=2.2.3,<3",
    "flask-restful>=0.3.9,<0.4",
    "gunicorn>=20.1.0,<21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
